src/components/layout/Card.module.css
.container_card {
  width: 200px;
  height: 200px;
  background-color: aliceblue;
  border-radius: 10px;
  box-shadow: 5px 5px 7px black;
}

.container_card img {
  width: 100%;
  height: 80%;
  max-height: 80%;
  object-fit: cover;
}

.container_card p {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-size: 1.3rem;
  margin-left: 10px;
}

@media screen and (max-width: 768px) {
  .container_card {
    width: 150px;
    height: 150px;
  }
}

